--- a/office/index.htm
+++ b/office/index.htm
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Dr. Chuck Office Hours</title>
-    <link href="//google-developers.appspot.com/maps/documentation/javascript/examples/default.css" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Dr. Chuck Office Hours</title>
 <style>
+/* Map container - fill viewport */
+html, body { height: 100%; margin: 0; padding: 0; }
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -45,6 +46,16 @@
     text-decoration: none;
     cursor: pointer;
 }
+.skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background: orange;
+    color: black !important;
+    padding: 8px;
+    z-index: 100;
+}
+.skip-link:focus { top: 0; }
 </style>
 
     <!-- If you are in China, you may need to use theis site for the Google Maps code
@@ -98,105 +109,96 @@
             markers.push(marker);
         }
 
-        // https://www.w3schools.com/howto/howto_css_modals.asp
-        // Get the modal
+        // Modal accessibility
         var modal = document.getElementById('myModal');
-
-        // Get the button that opens the modal
         var btn = document.getElementById("myBtn");
+        var closeBtn = document.getElementsByClassName("close")[0];
 
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks on the button, open the modal 
-        btn.onclick = function() {
+        function openModal() {
             modal.style.display = "block";
+            modal.setAttribute("aria-hidden", "false");
+            closeBtn.focus();
         }
 
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
+        function closeModal() {
             modal.style.display = "none";
+            modal.setAttribute("aria-hidden", "true");
+            btn.focus();
         }
 
-        // When the user clicks anywhere outside of the modal, close it
+        btn.onclick = openModal;
+        closeBtn.onclick = closeModal;
+
         window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
+            if (event.target == modal) closeModal();
         }
+
+        document.addEventListener("keydown", function(event) {
+            if (event.key === "Escape" && modal.style.display === "block") closeModal();
+        });
+
+        // Mark Google Maps layout tables as presentational for accessibility
+        setTimeout(function() {
+            var tables = document.querySelectorAll('#map_canvas table');
+            for (var i = 0; i < tables.length; i++) {
+                tables[i].setAttribute('role', 'presentation');
+            }
+        }, 1500);
 
       }
     </script>
   </head>
   <body onload="initialize()">
+  <a href="#map_canvas" class="skip-link">Skip to map</a>
+  <header role="banner" style="position: absolute; top:10px; right: 10px; z-index: 2; border: orange 5px solid; background: white; margin: 5px; padding: 5px; text-align: center;">
+    <h1 style="margin: 0 0 0.5em 0; font-size: 1em;">Dr. Chuck's Office Hours</h1>
+    <button type="button" id="myBtn">About</button>
+    <button type="button" id="live" onclick="window.location='https://www.dr-chuck.com/live'; return false;">Live</button>
+  </header>
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="myModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" aria-hidden="true">
 
   <!-- Modal content -->
   <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>
-    <b>Dr. Chuck's Office Hours</b>
+    <button type="button" class="close" aria-label="Close dialog">&times;</button>
+    <h2 id="modal-title">Dr. Chuck's Office Hours</h2>
   <p>
-This is a map of Dr. Chuck's remote office hours.  Because 
-of travel restrictions due to Covid, 
-upcoming office hours are 
-<a href="https://www.dr-chuck.com/live">live and online</a>.  
+This is a map of Dr. Chuck's remote office hours. Because of travel restrictions due to Covid,
+upcoming office hours are <a href="https://www.dr-chuck.com/live">live and online</a>.
 We have live office hours about once per month that you can join and participate.
-You can also view past 
-<a href="https://www.youtube.com/playlist?list=PLlRFEj9H3Oj4qyq0OLZ76cMtUUgqUNtmz" target="_blank">office hours</a>
-recordings on YouTube.
+You can also view past <a href="https://www.youtube.com/playlist?list=PLlRFEj9H3Oj4qyq0OLZ76cMtUUgqUNtmz" target="_blank" rel="noopener noreferrer">office hours</a> recordings on YouTube.
 </p>
-  On the map, the most recent remote office hour is always at the center of the map.
-  Sometimes you need to zoom in quite closely when there are more than one office hour video 
-  for a particular city (i.e. Amsterdam, Bletchley Park, New York City, or Seoul).
-  </p>
+  <p>
+On the map, the most recent remote office hour is always at the center of the map.
+Sometimes you need to zoom in quite closely when there are more than one office hour video
+for a particular city (i.e. Amsterdam, Bletchley Park, New York City, or Seoul).
 </p>
 <p>
-Dr. Chuck
-teaches a number of popular online courses including
-<a href="http://www.py4e.com/" target="_blank">Python for Everybody</a>,
-<a href="http://www.dj4e.com/" target="_blank">Django for Everybody</a>,
-<a href="http://www.pg4e.com/" target="_blank">PostgreSQL for Everybody</a>,
-<a href="http://www.wa4e.com/" target="_blank">Web Applications for Everybody</a> (PHP and MySQL).
+Dr. Chuck teaches a number of popular online courses including
+<a href="http://www.py4e.com/" target="_blank" rel="noopener noreferrer">Python for Everybody</a>,
+<a href="http://www.dj4e.com/" target="_blank" rel="noopener noreferrer">Django for Everybody</a>,
+<a href="http://www.pg4e.com/" target="_blank" rel="noopener noreferrer">PostgreSQL for Everybody</a>,
+<a href="http://www.wa4e.com/" target="_blank" rel="noopener noreferrer">Web Applications for Everybody</a> (PHP and MySQL).
 Dr. Chuck teaches courses on
-<a href="https://www.coursera.com/" target="_blank">Coursera</a>,
-<a href="https://www.edx.org/" target="_blank">edX</a>,
-<a href="https://www.futurelearn.com/" target="_blank">FutureLearn</a> and his
+<a href="https://www.coursera.com/" target="_blank" rel="noopener noreferrer">Coursera</a>,
+<a href="https://www.edx.org/" target="_blank" rel="noopener noreferrer">edX</a>,
+<a href="https://www.futurelearn.com/" target="_blank" rel="noopener noreferrer">FutureLearn</a> and his
 free open materials are used by many schools and teachers around the world.
-</a>
+</p>
 <p>
 My video that includes 
-<a href="https://www.youtube.com/watch?v=4hIwl_8hmq8&list=PLlRFEj9H3Oj4qyq0OLZ76cMtUUgqUNtmz" target="_blank">Paris and Milan</a> was my fun attempt to 
+<a href="https://www.youtube.com/watch?v=4hIwl_8hmq8&list=PLlRFEj9H3Oj4qyq0OLZ76cMtUUgqUNtmz" target="_blank" rel="noopener noreferrer">Paris and Milan</a> was my fun attempt to 
 film one of these visits in the style of a Travel Channel program.
 </p>
+<p>
 I have a 
-<a href="https://calendar.google.com/calendar/embed?src=umich.edu_bbmt0t2bt0pg29bt1nhjavr5uo%40group.calendar.google.com&ctz=America/New_York
-    " target="_blank">Calendar</a> of upcoming office hours.  
+<a href="https://calendar.google.com/calendar/embed?src=umich.edu_bbmt0t2bt0pg29bt1nhjavr5uo%40group.calendar.google.com&ctz=America/New_York" target="_blank" rel="noopener noreferrer">Calendar</a> of upcoming office hours.  
 When an entry says "TBD" it means that I am expecting to be traveling to a city
     for office hours but do not yet know an exact time and location.</p>
   </div>
 </div>
 
-<div id="map_canvas" style="height: 100%; width: 100%"></div>
-<div style="border: orange 5px solid; position: absolute; top:10px; right: 10px; background: white; margin: 5px; padding: 5px;">
-<!-- Trigger/Open The Modal -->
-<center>
-<b>Dr. Chuck's Office Hours<br/>
-<button id="myBtn">About</button>
-<button id="live" onclick="window.location='https://www.dr-chuck.com/live'; return false;">Live</button>
-</center>
-</div>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-423997-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<div id="map_canvas" role="region" aria-label="Interactive map of Dr. Chuck office hours locations" tabindex="-1" style="height: 100%; width: 100%"></div>
 </body>
 </html>
